Fixed null pointer exception properly